steps/end-point/k8s/client-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: eslzacr7z6cmpr2wmwso.azurecr.io/smartbrainclient
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
