steps/end-point/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-persistent-volume-claim
      containers:
        - name: redis
          image: eslzacr7z6cmpr2wmwso.azurecr.io/redis
          imagePullPolicy: Always
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: '/data'
