steps/end-point/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: eslzacr7z6cmpr2wmwso.azurecr.io/smartbrainapi:v8
        imagePullPolicy: Always
        volumeMounts:
          - name: secrets-store-inline
            mountPath: '/mnt/secrets-store'
            readOnly: true
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          periodSeconds: 3
          timeoutSeconds: 1
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "postgres-secret-csi"
