steps/end-point/k8s/http-ingress.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'azure/application-gateway'
    # appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-service
                port:
                  number: 5000
          - path: /worker/*
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: worker-service
                port:
                  number: 2000
          - path: /
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-service
                port:
                  number: 3000
