steps/end-point/k8s/https-ingress.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'azure/application-gateway'
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    # nginx.ingress.kubernetes.io/use-regex: 'true'
    # ADD ANNOTATION
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE ANNOTATION
spec:
  tls:
    - hosts:
      - fibcalculator.eastus.cloudapp.azure.com
      secretName: aks-tls-akv
  rules:
    - host: fibcalculator.eastus.cloudapp.azure.com
      http:
        paths:
          - path: /
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: client-service
                port:
                  number: 3000
          - path: /api/values/all
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-service
                port:
                  number: 5000
          - path: /api/values
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-service
                port:
                  number: 5000
          - path: /api/values/current
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-service
                port:
                  number: 5000
          - path: /api
            # UPDATE PATH
            pathType: Prefix
            # ADD PATHTYPE
            backend:
              service:
                # UPDATE SERVICE FIELDS
                name: server-service
                port:
                  number: 5000
